added css styling to make it more user friendly, dropdown is there but non functional

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <main class="container">
-        <header>
+        <header class="page__header">
             <h1>Glendale, IL Criminals</h1>
             <div class="filters">
                 <div class="filter filters__crime"></div>
