the note form now saves the notes to a local json server

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <main class="container">
         <header class="page__header">
-            <h1 class="headline">Glendale PD | <span>database.</span> </h1>
+            <h1 class="headline">Glassdale PD | <span>database.</span> </h1>
 
             <div class="filters">
                 <div class="filter filters__crime"></div>
@@ -22,14 +22,10 @@
 
         <section class="content">
 
-            <article class="criminalsContainer">
-
-            </article>
+            <article class="criminalsContainer"></article>
             <article class="noteFormContainer"></article>
             <article class="criminalsContainer"></article>
-            <article class="officersContainer">
-
-            </article>
+            <article class="officersContainer"></article>
         </section>
     </main>
 
