wrote js to post user submitted notes to the DOM

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
         <section class="content">
 
             <article class="criminalsContainer"></article>
-            <article class="noteFormContainer"></article>
+            <div class="notesContainer">
+                <h2 class="note__header">Glassdale PD | <span>notes.</span></h2>
+                <div class="note__content">
+                    <article class="noteFormContainer"></article>
+                    <section class="noteContainer"></section>
+                </div>
+            </div>
             <article class="criminalsContainer"></article>
             <article class="officersContainer"></article>
         </section>
