the interview associates button works but it creates a new card for each criminal interviewed but not just for the current criminal

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
 
         <section class="content">
-
+            <article class="interviewContainer"></article>
             <article class="criminalsContainer"></article>
             <div class="notesContainer">
                 <h2 class="note__header">Glassdale PD | <span>notes.</span></h2>
