--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <header class="page__header">
             <h1 class="headline">Glassdale PD | <span>database.</span> </h1>
 
+            <button id="witness__button">interview witnesses</button>
             <div class="filters">
                 <div class="filter filters__crime"></div>
                 <div class="filter filters__incarceration"></div>
@@ -21,7 +22,9 @@
         </header>
         <section class="content">
             <article class="interviewContainer"></article>
-            <article class="criminalsContainer"></article>
+            <article class="criminalsContainer">
+                
+            </article>
             <div class="notesContainer">
                 <h2 class="note__header">Glassdale PD | <span>notes.</span></h2>
                 <div class="note__content">
