restyled the page to have the items side by side code is cleaned up and for the most part commented out

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                 <div class="filter filters__officer"></div>
             </div>
             <button id="witness__button">interview witnesses</button>
+            <button id="witenessClose__button">hide witnesses</button>
         </header>
+        <article class="interviewContainer"></article>
         <section class="content">
-            <article class="interviewContainer"></article>
             <article class="criminalsContainer">
                 
             </article>
