--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <div class="filter filters__crime"></div>
                     <div class="filter filters__incarceration"></div>
                     <div class="filter filters__officer"></div>
+                    <div class="filter filter__button"></div>
                 </div>
                 <button class="witness__button" id="witness__button">interview witnesses</button>
                 <button class="witness__button" id="witenessClose__button">hide witnesses</button>
